Regression: When appending a Scene, the Collections that are turned off get instanced into Current Scene #98072

Closed
opened 2022-05-12 14:20:00 +02:00 by Konstantins Visnevskis · 8 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.39

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c
Worked: 2.93.9
Caused by 3be5ce4aad

Short description of error
As a rule, when appending a Scene, you get just that - the Scene gets appended as a new one. However, if the Scene contains Collections that are turned off, besides appending the Scene, these Collections also get instanced into the Active Scene.

Exact steps for others to reproduce the error
scene-append7.blend
Append the Scene from the file -> An instance appears in Current Scene.

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.39 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` Worked: 2.93.9 Caused by 3be5ce4aad **Short description of error** As a rule, when appending a Scene, you get just that - the Scene gets appended as a new one. However, if the Scene contains Collections that are turned off, besides appending the Scene, these Collections also get instanced into the Active Scene. **Exact steps for others to reproduce the error** [scene-append7.blend](https://archive.blender.org/developer/F13070674/scene-append7.blend) Append the Scene from the file -> An instance appears in Current Scene.

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis
Konstantins Visnevskis changed title from When appending a scene, the Collections that are turned off get instanced into current scene to When appending a Scene, the Collections that are turned off get instanced into Current Scene 2022-05-12 14:20:27 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm (this seems like a regression), will check

Can confirm (this seems like a regression), will check
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

Caused by 3be5ce4aad

@mont29: mind checking?

Caused by 3be5ce4aad @mont29: mind checking?
Philipp Oeser changed title from When appending a Scene, the Collections that are turned off get instanced into Current Scene to Regression: When appending a Scene, the Collections that are turned off get instanced into Current Scene 2022-05-12 16:07:58 +02:00

This issue was referenced by 074c695a0d

This issue was referenced by 074c695a0d4de88550be71181690639ab6b16dcf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-05-13 18:07:38 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98072
No description provided.