Fix T98072: Regression: When appending a Scene, the Collections that are excluded get instanced into Current Scene.

This was due to using `BKE_scene_has_object` function, which uses the
cache of bases of the viewlayers, which do not have entries for the
content of excluded collections... Now use
`BKE_collection_has_object_recursive` instead.